--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ python-dateutil>=2.8.2
 pytz>=2022.6
 six>=1.16.0
 PyInstaller>=5.7.0
+pyvisa-py>=0.5.3
+pyvisa>=1.12.0
+typing-extensions>=4.4.0
+pyvisa>=1.12.0
